--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "devDependencies": {},
   "scripts": {
     "install-server": "cd backend && npm install",
-    "start-server": "cd backend && node app.js",
+    "start-server": "cd backend && node index.js",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
-    "start-client": "cd client && npm run start"
+    "start-client": "cd client && npm run dev"
   },
   "keywords": [],
   "author": "",
